# Rhai_Learning

./: .gitignore  Cargo.toml  README.md
benches/: compare.rs
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  hot-swapping.md  performance.md  rust-types-and-crates.md  serialization-data-exchange.md
docs/: getting-started.md  hot-swapping.md  performance.md  rust-types-and-crates.md  serialization-data-exchange.md  testing.md
examples/: async_sim.html  async_sim.md  async_sim.rhai  basic_arith.html  basic_arith.md  basic_arith.rhai  collections.html  collections.md  collections.rhai  custom_module.html  custom_module.md  custom_module.rhai  error_handling.html  error_handling.md  error_handling.rhai  hello.html  hello.md  hello.rhai  hot_swap.html  hot_swap.md  hot_swap.rhai  http_request.html  http_request.md  http_request.rhai  manifest.toml  math_utils.rhai  perf_loop.html  perf_loop.md  perf_loop.rhai  random.html  random.md  random.rhai  serde_demo.html  serde_demo.md  serde_demo.rhai  unit_tests.html  unit_tests.md  unit_tests.rhai  use_struct.html  use_struct.md  (+1 more)
src/: main.rs
src/examples/: mod.rs
src/ui/: app.rs  mod.rs
tests/: rhai_examples.rs
