[package]
name = "Rhai_Learning"
version = "0.1.0"
edition = "2024"

[dependencies]
rhai = { version = "1.22.2", features = ["serde"] }
egui = "0.32.1"
eframe = "0.32.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.8.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "compare"
harness = false
